Fixed modal alerts overflow

--- a/public_html/layouts/basic/styles/libraries/_Bootstrap.scss
+++ b/public_html/layouts/basic/styles/libraries/_Bootstrap.scss
@@ -22,3 +22,8 @@ label.btn.btn-outline-primary {
 		border-bottom: 1px solid $color-grey-light;
 	}
 }
+
+//fixes overflow for validation alerts
+.modal-body {
+	overflow-y: initial !important;
+}
